# hymn_pdf_generator

./: .gitignore  README.md  pyproject.toml
example/: selecao_aniversario_ingrid.yaml
hymn_pdf_generator/: config.py  main.py  models.py  pdf_elements.py  pdf_generator.py  repetition_bar_allocator.py
hymn_pdf_generator/example/: selecao_aniversario_ingrid.yaml
hymn_pdf_generator/input/: selecao_aniversario_ingrid.yaml
tests/: test_hymn_pdf_generator.py
