[tool.poetry]
name = "hymn_pdf_generator"
version = "0.1.0"
description = "A library to generate Santo Daime Hymn books with formatting opitions"
authors = ["Nitai Bezerra da Silva <nitaibezerra@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyaml = "^24.7.0"
reportlab = "^4.2.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
